--- a/wineCollector/Info.plist
+++ b/wineCollector/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>We want access to your camera so we can log your wine collection.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We want access to your existing photos of wines so that you don&apos;t have to take a new photo.</string>
 	<key>CFBundleDevelopmentRegion</key>
